data/src/objects/Candidate__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <picklist>
            <picklistValues>
                <fullName>Value-001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-028</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bootcamp__c</fullName>
        <label>Bootcamp</label>
        <referenceTo>Bootcamp__c</referenceTo>
        <relationshipLabel>Candidates</relationshipLabel>
        <relationshipName>Candidates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Candidates</relationshipLabel>
        <relationshipName>Candidates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>Case( Week__c, 1, &quot;Week 1&quot;, 2, &quot;Week 2&quot;, 3, &quot;Week 3&quot;, 4, &quot;Week 4&quot;, &quot;Not Active&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Test External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <label>Week</label>
        <summaryFilterItems>
            <field>Weekly_Review__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Weekly_Review__c.Candidate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Candidate Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>